--- a/css/style.css
+++ b/css/style.css
@@ -6,7 +6,23 @@
     font-family: Arial, Helvetica, sans-serif;
 }
 
-/* Navbar */
+html, body {
+    margin: 0;
+    padding: 0;
+    height: 100%;
+}
+
+header {
+    background-color: #f5f5f5;
+}
+
+/* Hero Navbar */
+#hero-section {
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
+}
+
 nav {
     display: flex;
     justify-content: space-between;
@@ -58,12 +74,47 @@ nav {
     border-bottom-right-radius: 5px;
 }
 
-/* Hero Section */
-#hero-section {
-    height: 100vh;
-}
-
 #icon {
     width: 70px;
     height: 70px;
+}
+
+/* Hero Text */
+#hero-text {
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    padding: 4rem 7rem;
+    background-color: #F5CBCB;
+}
+
+#hero-text h1,
+#hero-text p {
+    text-align: left;
+    align-self: flex-start;
+}
+
+#hero-text h1 {
+    font-size: 2rem;
+}
+
+#hero-text p {
+    font-size: 1.2rem;
+    margin-top: .5rem;
+}
+
+#hero-banner {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-grow: 1;
+    width: 100%;
+}
+
+#hero-banner img {
+    transform: scale(1.3);
+    transform-origin: center;
+    display: block;
+    margin: 0 auto;
 }
