--- a/css/style.css
+++ b/css/style.css
@@ -7,8 +7,6 @@
 }
 
 html, body {
-    margin: 0;
-    padding: 0;
     height: 100%;
 }
 
@@ -16,13 +14,34 @@ header {
     background-color: #f5f5f5;
 }
 
-/* Hero Navbar */
-#hero-section {
+
+.hero-text,
+.about-headquarter,
+.about-message {
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    padding: 4rem 7rem;
+}
+
+.hero-text h1,
+.hero-text p,
+.about-headquarter h2,
+.about-message h2 {
+    text-align: left;
+    align-self: flex-start;
+}
+
+#hero-section,
+#about-section {
     height: 100vh;
     display: flex;
     flex-direction: column;
 }
 
+
+/* Hero Navbar */
 nav {
     display: flex;
     justify-content: space-between;
@@ -80,31 +99,20 @@ nav {
 }
 
 /* Hero Text */
-#hero-text {
-    flex: 1;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    padding: 4rem 7rem;
+.hero-text {
     background-color: #F5CBCB;
 }
 
-#hero-text h1,
-#hero-text p {
-    text-align: left;
-    align-self: flex-start;
-}
-
-#hero-text h1 {
+.hero-text h1 {
     font-size: 2rem;
 }
 
-#hero-text p {
+.hero-text p {
     font-size: 1.2rem;
-    margin-top: .5rem;
+    padding-top: .5rem;
 }
 
-#hero-banner {
+.hero-banner {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -112,9 +120,64 @@ nav {
     width: 100%;
 }
 
-#hero-banner img {
+.hero-banner img {
     transform: scale(1.3);
     transform-origin: center;
     display: block;
     margin: 0 auto;
+}
+
+
+/* About Section */
+.about-headquarter{
+    flex: 4;
+    background-color: #F8E8EE;
+}
+
+.about-message {
+    flex: 6;
+    background-color: #F5CBCB;
+}
+
+.locations {
+  display: flex;
+  justify-content: center;
+  gap: 5rem;
+  padding: 2rem;
+}
+
+.location {
+  text-align: center;
+}
+
+.location p {
+    padding-top: 1rem;
+}
+
+.circle {
+  width: 220px;
+  height: 220px;
+  border-radius: 50%;
+  overflow: hidden;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border: 3px solid black;
+  margin: auto;
+  background-color: white;
+}
+
+.circle img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  object-position: center;
+  display: block;
+}
+
+
+/* Footer */
+.footer p {
+    text-align: right;
+    padding: 1rem;
 }
